# SBE-Backlog-TeamsCallAnalysis

./: .env.example  .gitignore  README.md  pyproject.toml
src/sbe_teams_call_analysis/: __init__.py  config.py  graph.py  main.py  server.py  storage.py  sync.py  vtt.py
tests/: test_config.py  test_vtt.py
